# bear-proxy

./: .example.env  Cargo.toml  Dockerfile-proxy  config.yml  docker-compose.yml  readme.md
pages/: index.html  login.html
src/: main.rs
src/controllers/: auth.rs  mod.rs  pages.rs  rules.rs
src/middlewares/: auth.rs
src/models/: auth.rs  mod.rs  rule.rs  server.rs  service.rs
src/utils/: response.rs
static/: index.html  login.html
static/js/: index.js  login.js
