[package]
name = "ctf-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
futures = "0.3.29"
axum = "0.7.4"
serde_json = "1.0.114"
base64 = "0.22.0"
rusqlite = "0.31.0"
hex = "0.4.3"