[package]
name = "ctf-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
futures = "0.3.29"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["cookie"] }
serde_json = "1.0.114"
base64 = "0.22.0"
rusqlite = "0.31.0"
hex = "0.4.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
dotenv = "0.15.0"
tower-http = { version = "0.5.2", features = ["fs"] }